# Logger

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Logger.h
src/: main.cpp
